fixed scrollbar on list elements

--- a/public/header.css
+++ b/public/header.css
@@ -90,6 +90,7 @@ body {
 
 .nav-links li {
   margin-right: 20px;
+  overflow: hidden;
   position: relative;
 }
 
